--- a/magisk-module/config.cfg
+++ b/magisk-module/config.cfg
@@ -1,6 +1,6 @@
-URL='https://120.232.89.47:59814/setdevice'
-SECRET='MySecret'
-DEVICE=2
+URL='your url'
+SECRET='your secret'
+DEVICE=0
 LOG_NAME="monitor.log"
 CACHE="${SCRIPT_DIR}/cache.txt"
 # 自定义游戏包名（以空格分隔）
